namespace finalSDP.scripts.entity.player;
using Godot;


public partial class Player : Entity
{
    public override float MaxHp { get; set; } = 100;

    
}